Adaptation du sujet à 4h, lien vers perceptron

--- a/TP/tp-bp/seoc3a/rendu/tp-branch-res.tex
+++ b/TP/tp-bp/seoc3a/rendu/tp-branch-res.tex
@@ -27,7 +27,7 @@
 \begin{document}
 \begin{center}
 \large
-Travaux Pratiques Archi SLE-3A\\
+Travaux Pratiques Archi SEOC-3A\\
 \LARGE
 Prédiction de branchements\\
 \large
