--- a/TP/tp-simd/tp-simd.tex
+++ b/TP/tp-simd/tp-simd.tex
@@ -31,12 +31,12 @@
 \begin{document}
 \begin{center}
 \Large
-5MMCEAMC/SLE-3A Travaux Pratiques\\
+SEOC-3A Travaux Pratiques\\
 Utilisation des extensions SSE du x86\_64 pour le calcul\\
 de la conversion YCbCr vers RGB en Motion Jpeg\\~\\
 \large
 Frédéric Pétrot/Arthur Perais\\
-Durée~: 3 heures
+Durée~: 2 heures
 \end{center}
 
 \section{Organisation}
