--- a/TP/tp-simd/tp-simd.tex
+++ b/TP/tp-simd/tp-simd.tex
@@ -99,7 +99,9 @@ Le TP utilise un décodeur vidéo Motion-JPEG (celui du projet C de 1ère année
 
 \subsection{Préliminaires}
 
-On clonera le repo git à partir du gitlab (\lstinline{git clone  https://gitlab.ensimag.fr/petrotf/3a-archi.git}). Si vous comptez travailler sur votre machine, il conviendra probablement d'installer la librarie SDL afin d'afficher ce que l'on décode à l'écran. Sur Ubuntu : \\
+%On clonera le repo git à partir du gitlab (\lstinline{git clone  https://gitlab.ensimag.fr/petrotf/3a-archi.git}). 
+
+Si vous comptez travailler sur votre machine, il conviendra probablement d'installer la librarie SDL afin d'afficher ce que l'on décode à l'écran. Sur Ubuntu : \\
 
 \lstinline{sudo apt install libsdl-sound1.2 libsdl-net1.2 libsdl-gfx1.2-5 libsdl-image1.2 libsdl-mixer1.2 libsdl-ttf1.2 libsdl1.2-dev} \\
 
