Update bp subject

--- a/TP/tp-bp/tp-branch.tex
+++ b/TP/tp-bp/tp-branch.tex
@@ -26,11 +26,11 @@
 \textwidth      170mm
 \textheight     240mm
 \flushbottom
-\graphicspath{{./figures/}{../../scripts/}}
+\graphicspath{{./figures/}{./scripts/h1/}{./todo/sujet/}{./todo/sujet/figures/}}
 \begin{document}
 \begin{center}
 \large
-Travaux Pratiques Archi SEOC-3A - 2021/2022\\
+Travaux Pratiques Archi ISI-3A - 2022/2023\\
 Sujet de Frédéric Pétrot et Arthur Perais\\
 \LARGE
 Implantations et évaluations de\\
