Change default font to ubuntu supported one

--- a/TP/tp-bp/todo/rendu/tp-branch-res.tex
+++ b/TP/tp-bp/todo/rendu/tp-branch-res.tex
@@ -3,8 +3,7 @@
 \documentclass[a4paper]{article}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{libertine}
-\usepackage{helvet}
+\usepackage{charter}
 \usepackage{graphicx}
 \usepackage{amsmath,amssymb}
 \usepackage[french]{babel}
