Correcting wrong labels

--- a/TP/tp-bp/sujet/tp-branch.tex
+++ b/TP/tp-bp/sujet/tp-branch.tex
@@ -2,11 +2,10 @@
 % vim:spell spelllang=fr:
 \documentclass[a4paper]{article}
 \usepackage[french]{babel}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{charter}
 %\usepackage[scaled=0.83]{beramono}
-\usepackage{helvet}
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage[french]{babel}
@@ -16,7 +15,6 @@
 \setstretch{1.0}
 \usepackage{subfigure}
 \usepackage[fleqn]{amsmath}
-\usepackage{listings}
 \voffset       -1in
 \hoffset       -1in
 \headheight     12pt
@@ -214,11 +212,11 @@ On donne sur la figure~\ref{results} le type de résultat attendu pour le prédi
       }
       \subfigure[5 bits par compteur]{
       \includegraphics[scale=.48]{./figures/graph_5.pdf}
-      \label{plot3}
+      \label{plot5}
       }
       \subfigure[6 bits par compteur]{
       \includegraphics[scale=.48]{./figures/graph_6.pdf}
-      \label{plot4}
+      \label{plot6}
       }
       \caption{\label{results}Les courbes de MPKI pour le prédicteur bimodal simple, en fonction du nombre de bits par compteur et du nombre d'entrées.}
       \end{figure}
